# py_ddns

./: .gitignore  LICENSE  README.md  __init__.py  cache.py  cloudflare_ddns.py  cloudflare_service.py  config.py  ddni.ini.example  py_ddns.ini.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pylint.yml  pytest.yml  semantic-versioning.yml
ddns/: __init__.py  cache.py  client.py  cloudflare_service.py  config.py  duckdns_service.py
ddns/services/: cloudflare_service.py  duckdns_service.py
ddns/tests/: test_client.py  test_config.py
javascript/: ddns.js  package.json
src/ddns/: client.py
src/pyddns/: __init__.py  cache.py  client.py  config.py  storage.py  utils.py
src/pyddns/services/: __init__.py  cloudflare_service.py  duckdns_service.py
tests/: conftest.py  test_client.py  test_cloudflare_service.py  test_config.py  test_duckdns_service.py  test_storage.py
