[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyddns"
version = "0.0.0"
description = "Programmable DDNS client to automate IP address changes."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    { name = "Mitchell Johnson", email = "91237766+mitjohnson@users.noreply.github.com" }
]
keywords = ["ddns", "dynamic dns", "ip automation"]
requires-python = ">= 3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "build==1.2.2.post1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-option-group==0.5.7",
    "cloudflare==4.0.0",
    "Deprecated==1.2.18",
    "distro==1.9.0",
    "dotty-dict==1.3.1",
    "exceptiongroup==1.2.2",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib_resources==6.5.2",
    "iniconfig==2.1.0",
    "Jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "pyproject_hooks==1.2.0",
    "pytest==8.3.5",
    "python-gitlab==5.6.0",
    "python-semantic-release==10.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "tomli==2.2.1",
    "tomlkit==0.13.2",
    "types-requests==2.32.0.20250301",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "wrapt==1.17.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build --sdist --wheel ."
commit_parser = "conventional"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]
